# asta

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  asta.sh  diffs.txt  docker-compose.yml  grant-mac-permissions.sh  query_rag.py  test_api.sh  verify_chat.py  verify_files.py
.claude/: settings.json
.github/workflows/: release.yml
MACAPP/: Endpoints.md  Package.swift  README.md  SETTINGS-ASTA-ONLY.md  SETUP-AND-PERMISSIONS.md  WEB-UI-PARITY.md  build-release.sh
MACWinApp/: README.md
MACWinApp/asta-app/: index.html  (+3 more)
MACWinApp/asta-app/src-tauri/: Cargo.toml  tauri.conf.json  updater.key.pub
MACWinApp/asta-app/src-tauri/capabilities/: default.json
MACWinApp/asta-app/src-tauri/icons/: icon.icns
MACWinApp/asta-app/src-tauri/nsis/: installer.nsi
MACWinApp/asta-app/src-tauri/src/: lib.rs  main.rs
MobileApp/: App.tsx  app.json  eas.json  package-lock.json  package.json
backend/: asta.db.sql  check_rag.py  cli_status.py  mcp_servers.json  requirements.txt
backups/: client.ts.bak  files.py.bak  handler.py.bak
docs/: ERRORS.md  INSTALL.md  OPENCLAW-COMPAT-PLAN.md  OPENCLAW-EXEC-NOTES.md  PUSH.md  SECURITY.md  SPEC.md  TEST_RESULTS.md  WORKSPACE.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
reference/: README.md
scripts/: create_master_hub.py  inspect_reasoning_delta.py  setup_ollama_rag.sh  smoke_test_thinking.py  verify_key_injection.py  verify_notion_access.py
workspace/: AGENTS.md  SOUL.md  TOOLS.md  USER.md  USER_SOUL.md
(+411 files in other folders)
